style: updated styles and integrated onboarding screens.
feat: added signout

--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -50,3 +50,12 @@ body {
   bottom: 0;
   right: 0;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    margin:0;
+    height:100%;
+    background-color: #042a49;
+    background-size: 100% 100%;
+  }
+}
