fix: minor fixes. styles: minor style updates

--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -55,7 +55,7 @@ body {
   body {
     margin:0;
     height:100%;
-    background-color: #042a49;
+    background-color: #182231;
     background-size: 100% 100%;
   }
 }
